--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/router": "^14.2.0",
     "@auth0/angular-jwt": "^5.0.2",
     "@sweetalert2/ngx-sweetalert2": "^11.0.0",
+    "bootstrap": "^5.2.1",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.33",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
